<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main -->
    <string name="app_name">Venture Box</string>
    <string name="drawer_welcome">All-in-one place for VentureROM</string>
    <string name="home">Home</string>
    <string name="main">MainFragment</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_close">Drawer is closed</string>

    <!-- SYSTEM ACTIVITY -->
    <string name="check_for_updates_long">Check for updates</string>
    <string name="all_up_to_date">You\'re up to date!</string>
    <string name="rom_scanning">Checking for system updates...</string>
    <string name="rom_gapps_new_version">System updates found!</string>
    <string name="rom_new_version">New ROM update found!</string>
    <string name="gapps_new_version">New Google apps update found!</string>
    <string name="no_updates">No system updates found</string>
    <string name="system_update_found">A new system update was found and is ready to download.\nPlease check the notifications that may have appeared. They will lead you to VentureBox from where you will be able to download and/or install the update.\n\nUpdate(s) found:\n%1$s</string>

    <!-- SYSTEM -->
    <string name="system_title">System info</string>
    <string name="system_rom">VentureROM version: %1$s</string>
    <string name="system_maintainer">Maintainer: %1$s</string>
    <string name="system_gapps">Google apps version: %1$s %2$s</string>
    <string name="system_recovery">Recovery version: %1$s</string>
    <string name="system_recovery_unknown">Unknown</string>

    <!-- UPDATES -->
    <string name="updates">Updates</string>
    <string name="updates_checking">Checking...</string>
    <string name="updates_error">Error</string>
    <string name="updates_found">System update found</string>
    <string name="updates_uptodate">You\'re up to date</string>
    <string name="no_updates_found">No updates found</string>
    <string name="check_rom_updates_error">Error checking for ROM updates</string>
    <string name="check_gapps_updates_error">Error checking for Google apps updates</string>
    <string name="system_update">System update found.\nSelect the update(s) you want to download.\n\nUpdate(s) found:</string>
    <string name="download_and_install">Download and install</string>
    <string name="update_host">Hosted at %1$s</string>

    <!-- INSTALL -->
    <string name="install">Install</string>
    <string name="install_title">Ready to install</string>
    <string name="install_info">The following update(s) are ready to be installed.\n\nYou can add more zips by clicking on the \"Add file\" button.</string>
    <string name="add_file">Add file</string>
    <string name="install_now">Install now</string>
    <string name="calculating_md5">Calculating MD5 sum...</string>
    <string name="md5_mismatch">MD5 mismatch</string>
    <string name="md5_mismatch_summary">Received:\n%1$s\n\nCalculated:\n%2$s</string>
    <string name="md5_install_anyway">Continue anyway</string>
    <string name="select_actions">Select the actions you would like to perform</string>
    <string name="backup">Backup</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="wipe_caches">Wipe Cache &amp; Dalvik</string>
    <string name="remove_file_title">Remove file</string>
    <string name="remove_file_summary">Do you want to remove the file from the list?\n\n%1$s</string>
    <string name="file_manager_error">No applications found to select the zip file. Please install a file manager.</string>
    <string name="alert_backup_space_title">Space left</string>
    <string name="alert_backup_space_message">There\'s less than %1$sGB in the internal SD card. Do you want to continue with the backup?</string>
    <string name="alert_backup_title">Backup</string>
    <string name="alert_backup_message">Specify the backup name (illegal characters will be removed).\n\nThe following options will only work in TWRP.</string>
    <string name="system">System</string>
    <string name="data">Data</string>
    <string name="cache">Cache</string>
    <string name="recovery">Recovery</string>
    <string name="boot">Boot</string>
    <string name="androidsecure">Android secure</string>
    <string name="sdext">SD-Ext</string>
    <string name="alert_reboot_install_title">Install update(s)</string>
    <string name="alert_reboot_one_message">Your device will reboot and install the update.</string>
    <string name="alert_reboot_more_message">Your device will reboot and install the updates.</string>
    <string name="alert_reboot_now">Install now</string>
    <string name="file_not_found">Unable to add file</string>

    <!-- Main Fragment -->
    <string name="changelog">Changelog</string>

    <!-- DOWNLOADS/NOTIFICATIONS -->
    <string name="download_card_title">Downloading system update</string>
    <string name="download_title">%1$s</string>
    <string name="cancel_download_alert_title">Cancel download</string>
    <string name="cancel_rom_download_alert_summary">Do you want to cancel the current ROM download?</string>
    <string name="cancel_gapps_download_alert_summary">Do you want to cancel the current Google apps download?</string>
    <string name="cancel_download_alert_yes">Yes</string>
    <string name="cancel_download_alert_no">No</string>
    <string name="new_system_update">New system update found</string>
    <string name="new_package_name">%1$s</string>
    <string name="new_packages">%1$s updates available for download</string>
    <string name="already_downloading_rom">You are already downloading a ROM update.</string>
    <string name="already_downloading_gapps">You are already downloading a Google apps update.</string>
    <string name="cancel_download">Cancel download(s)</string>
    <string name="downloading_info">Update(s) downloading:\n%1$s</string>

    <!-- Venture Tweaks -->
    <string name="venture_tweaks">Venture Tweaks</string>

    <!-- Kernel Configuration -->
    <string name="kernel_configuration">Kernel Configuration</string>

    <!-- Settings Activity -->
    <string name="settings">Settings</string>
    <string name="title_activity_settings">@string/settings</string>
    <string name="settings_checktime_title">Update check frequency</string>
    <string name="settings_checktime_summary">Specify the time between each update check</string>
    <string name="settings_checkgapps_title">Check for Google apps</string>
    <string name="settings_checkgapps_summary">Check also for PA specific Google apps</string>
    <string name="settings_gappstype_title">Google apps type</string>
    <string name="settings_gappstype_summary">Choose between stock, full, mini, micro gapps packages</string>
    <string name="settings_deviceselect_title">[Advanced] Allow select device</string>
    <string name="settings_deviceselect_summary">Select device to test OTA</string>
    <string name="gapps_type_full">Full package</string>
    <string name="gapps_type_mini">Mini package</string>
    <string name="gapps_type_stock">Stock package</string>
    <string name="gapps_type_micro">Micro package</string>
    <string name="time_notifications_never">Don\'t check</string>
    <string name="time_notifications_half_an_hour">Half an hour</string>
    <string name="time_notifications_an_hour">1 hour</string>
    <string name="time_notifications_two_hours">2 hours</string>
    <string name="time_notifications_five_hours">5 hours</string>
    <string name="time_notifications_daily">Daily</string>

    <!-- Download Errors -->
    <string name="error_cannot_resume">Error: The download couldn\'t be resumed</string>
    <string name="error_device_not_found">Error: Sdcard not mounted</string>
    <string name="error_file_already_exists">Error: File already exists</string>
    <string name="error_file_error">Error: Storage error</string>
    <string name="error_http_data_error">Error: HTTP error</string>
    <string name="error_insufficient_space">Error: No space left</string>
    <string name="error_too_many_redirects">Error: Too many redirects</string>
    <string name="error_unhandled_http_code">Error: Unhandled http code</string>
    <string name="error_unknown">Error: unknown</string>
    <string name="error_device_not_found_title">Device not found</string>
    <string name="error_device_not_found_summary">A ROM for your device was not found. Please check manually.</string>
    <string name="error_device_not_found_server">A ROM for your device was not found.</string>
    <string name="notices">Notices</string>
    <string name="notice_empty">No notices available</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="no_additional_info">No additional inforation</string>
</resources>
