<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

        <PreferenceCategory
            android:title="@string/settings" >

            <ListPreference
                android:key="checktime"
                android:title="@string/settings_checktime_title"
                android:summary="@string/settings_checktime_summary"
                android:dialogTitle="@string/settings_checktime_title"
                android:entries="@array/time_notifications_entries"
                android:entryValues="@array/time_notifications_values" />

            <CheckBoxPreference
                android:key="checkgapps"
                android:title="@string/settings_checkgapps_title"
                android:summary="@string/settings_checkgapps_summary" />

            <ListPreference
                android:key="gappstype"
                android:dependency="checkgapps"
                android:title="@string/settings_gappstype_title"
                android:summary="@string/settings_gappstype_summary"
                android:entries="@array/gapps_type_entries"
                android:entryValues="@array/gapps_type_values" />

            <CheckBoxPreference
                android:key="deviceselect"
                android:title="@string/settings_deviceselect_title"
                android:summary="@string/settings_deviceselect_summary" />

        </PreferenceCategory>
    </PreferenceScreen>
